--- a/MoneyM/Storyboards/NewAccount.storyboard
+++ b/MoneyM/Storyboards/NewAccount.storyboard
@@ -34,6 +34,19 @@
                                                     <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ZT-oa-DNh">
                                                         <rect key="frame" x="146" y="20" width="90" height="90"/>
                                                         <subviews>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cHq-zm-vFe">
+                                                                <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="90" id="Dbi-7L-kZ2"/>
+                                                                    <constraint firstAttribute="width" constant="90" id="Y9m-Ff-bvu"/>
+                                                                </constraints>
+                                                                <userDefinedRuntimeAttributes>
+                                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusV">
+                                                                        <real key="value" value="45"/>
+                                                                    </userDefinedRuntimeAttribute>
+                                                                </userDefinedRuntimeAttributes>
+                                                            </view>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="face.smiling" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="iMY-Nn-Lha">
                                                                 <rect key="frame" x="15" y="15.5" width="60" height="60"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -42,6 +55,8 @@
                                                         </subviews>
                                                         <color key="backgroundColor" name="AccentColor"/>
                                                         <constraints>
+                                                            <constraint firstItem="cHq-zm-vFe" firstAttribute="centerX" secondItem="8ZT-oa-DNh" secondAttribute="centerX" id="Lo8-cr-yBQ"/>
+                                                            <constraint firstItem="cHq-zm-vFe" firstAttribute="centerY" secondItem="8ZT-oa-DNh" secondAttribute="centerY" id="aFh-FH-Hnd"/>
                                                             <constraint firstAttribute="height" constant="90" id="lYu-gm-DWi"/>
                                                             <constraint firstAttribute="width" constant="90" id="xXM-an-Yrg"/>
                                                         </constraints>
@@ -380,6 +395,7 @@
                         <outlet property="colorsCollectionView" destination="DBO-qi-AFh" id="Wc2-3N-2jz"/>
                         <outlet property="currencyButton" destination="gVb-fc-1dp" id="uQM-Z0-i7u"/>
                         <outlet property="iconBackgroundView" destination="8ZT-oa-DNh" id="ZaL-kh-2CG"/>
+                        <outlet property="iconBackgroundViewForAnimation" destination="cHq-zm-vFe" id="wdJ-XF-FlA"/>
                         <outlet property="iconImage" destination="iMY-Nn-Lha" id="CfX-4O-wCE"/>
                         <outlet property="iconsCollectionView" destination="2gl-5r-fij" id="nvA-dD-Uxl"/>
                         <outlet property="iconsCollectionViewConstraintHeight" destination="NKt-s8-kQe" id="jlm-Pu-d2Y"/>
@@ -389,7 +405,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="40.5" y="63"/>
+            <point key="canvasLocation" x="39.130434782608695" y="62.771739130434788"/>
         </scene>
         <!--Currency View Controller-->
         <scene sceneID="YHO-fH-0Rg">
